8th - started to implement cookies. On pc kinda works(still needs some fixes), on mobile not so much

--- a/public/style.css
+++ b/public/style.css
@@ -113,3 +113,32 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+
+/* Modal styles */
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.4); 
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; 
+}
+.button-container {
+  text-align: center;
+}
+.button-container button {
+  padding: 10px 20px;
+  margin: 0 10px;
+  cursor: pointer;
+}
